docs: 更新开发指南，清理项目需求池文档
- 完善开发指南：添加项目状态、快速开始说明
- 删除过时的开源信息文档
- 优化项目文档结构

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>